[package]
name = "leptos_virtual_scroller_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.11", features = ["csr"] }
leptos_virtual_scroller = { path = "../" }
rand = "0.9.2"
getrandom = {version = "0.3.4", features = ["wasm_js"]}
wasm-bindgen = "0.2.104"
